Fixed scrollbar on widget overflow. Fixed removal of $interval timer on widget close.

--- a/gui/web/src/styles/default_theme.less
+++ b/gui/web/src/styles/default_theme.less
@@ -454,6 +454,10 @@ a {
         font-size: 13px;
     }
 
+    .panel-content {
+        overflow: auto;
+    }
+
     .gantt-task-content {
         color: white;
     }
